The Jerk Project

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -586,7 +586,7 @@
               <h2 class="white-text text-center title bottom_30">Just kidding here is a frebbie
               </h2>
               <a href="https://www.figma.com/file/aTIhAVP6hrjXKl14rSFVfq/Galaxy-Free-for-the-people" target="_blank">
-                <button class="site-btn  text-center  bottom_30" data-tilt> LINK TO FIGMA FILE
+                <button class="site-btn  text-center  bottom_30" data-tilt>FIGMA FILE
                   <i class="icon ion-md-arrow-down"></i>
                 </button>
               </a>
