--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Gallo-Guapo.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
+            <a href="jerk-project.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/Jerk-project/jerk-project-Thumbnail.png"
                 alt="">
             </a>
           </div>
