--- a/jerk-project.html
+++ b/jerk-project.html
@@ -7,8 +7,10 @@
     <meta name="description" content="Peter Verastegui's Portofolio" />
     <meta name="keywords" content="personal, portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Peter Verastegui's Portfolio" />
-    <meta property="og:image" content="img/works/work-1/work-1-Thumb-7.png" />
+    <meta property="og:title" content="The Jerk Project" />
+    <meta property="og:description" content="The tech industry is a boys club, so it comes as no surprise that U.S.
+    tech companies do not provide a supportive workplace for women..." />
+    <meta property="og:image" content="img/works/Jerk-project/jerk-project-Thumbnail.png" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
@@ -169,13 +171,14 @@
                             alt="Megaphone Mocker" />
                     </div>
                 </div>
-                <div class="row lightbox-gallery padtop_30">
+                <div class="row lightbox-gallery padtop_30 padbot_30">
                     <div class="col-lg-8 offset-lg-2">
                         <h3 class="text white-text no-gutter subtitle">The Problem</h3>
                         <p class="white-text">
-                            The tech industry is a boys club, so it comes as no surprise that a vast mjority of U.S.
-                            tech companies do not provide a supportive workplace for woman. In fact they are the exact
-                            opposite, hostlile. According to a report by the National Center for Women and Information
+                            The tech industry is a boys club, so it comes as no surprise that U.S.
+                            tech companies do not provide a supportive workplace for women. In fact they are the exact
+                            opposite, hostlile. Fifty percent of women in STEM report gender-related discrimination.
+                            According to a report by the National Center for Women and Information
                             Technology &#40;NCWIT&#41; women in technology have an astonoshing 41% quit
                             rate compared to just 17% for men.
                         </p>
@@ -184,7 +187,7 @@
             </div>
         </section>
         <!-- ====Full Screen IMG ===-->
-        <div data-midnight="white" class="dark-bg">
+        <div data-midnight="dark" class="dark-bg">
             <img class="img-fluid" src="img/works/Jerk-project/The-Solution-Hero-IMG.png" alt="The Solution">
         </div>
         <!-- ====Full Screen IMG ===-->
@@ -192,23 +195,50 @@
             <div class="container">
                 <div class="row lightbox-gallery padtop_30">
                     <div class="col-lg-8  offset-lg-2">
-                        <h3 class="text white-text no-gutter subtitle text-center">The Solution</h3>
+                        <h3 class="text white-text no-gutter subtitle text-center">One Part of The Solution</h3>
                         <p class="white-text text-center">
-                            The tech industry is a boys club, so it comes as no surprise that a vast mjority of U.S.
-                            tech companies do not provide a supportive workplace for woman. In fact they are the exact
-                            opposite, hostlile. According to a report by the National Center for Women and Information
-                            Technology &#40;NCWIT&#41; women in technology have an astonoshing 41% quit
-                            rate compared to just 17% for men.
+                            One Solution Karen Holtzblatt and her team at WITOPS came up with was to seek &#40;through
+                            research&#41; a better understanding of workplace interactions in order to identify specific
+                            behaviors which
+                            create or undermine the experience of connection and value in the workplace.
                         </p>
                     </div>
                 </div>
             </div>
-
+            <!-- ====Full Screen IMG ===-->
+            <div data-midnight="dark" class="dark-bg">
+                <img class="img-fluid" src="img/works/Jerk-project/Bottom-curve-purple.png" alt="The Solution">
+            </div>
+            <!-- ====Full Screen IMG ===-->
         </section>
+        <section data-midnight="dark" class="dark-bg p-0">
+            <div class="project-detail container padding_90">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-5 offset-lg-1">
+                        <h3 class="text white-text no-gutter subtitle">Two main behaviors</h3>
+                        <p class="white-text">
+                            Women report that men, managers, or teammates are “bros” or “jerks”. But what does this
+                            mean? WITOPS’s research focused on understanding which behaviors are experienced as valuing
+                            and which result in naming the other as a “jerk”.
+                        </p>
+                    </div>
+                    <div class="image col-lg-5 align-self-center padtop_30">
+                        <img src="img/works/Jerk-project/jerk-vs-valueing.png" alt="Megaphone Mocker" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ====Full Screen IMG ===-->
+        <div data-midnight="dark" class="dark-bg">
+            <img class="img-fluid" src="img/works/Jerk-project/Top-curve-purple.png" alt="The Solution">
+        </div>
+        <!-- ====Full Screen IMG ===-->
 
+        <section data-midnight="dark" class="p-0">
 
-        <section data-midnight="white" class="p-0">
-            <div data-midnight="white" class="container jerk-project-bg-purple">
+            <div class="container jerk-project-bg-purple">
+
+                <h2 class="text white-text no-gutter title text-center padding_60">Valuing </h2>
                 <!-- Modal -->
                 <div class="lightbox-gallery masonry justify-content-center">
                     <!-- a image -->
@@ -276,7 +306,15 @@
                 </div>
             </div>
 
-            <div data-midnight="white" class="container dark-bg">
+            <!-- ====Full Screen IMG ===-->
+            <div data-midnight="white" class="dark-bg">
+                <img class="img-fluid" src="img/works/Jerk-project/Bottom-curve-purple.png" alt="The Solution">
+            </div>
+            <!-- ====Full Screen IMG ===-->
+
+            <div data-midnight="dark" class="container dark-bg">
+                <h2 class="text white-text no-gutter title text-center padding_60">Jerk</h2>
+
                 <!-- Modal -->
                 <div class="lightbox-gallery masonry justify-content-center">
                     <!-- a image -->
@@ -346,12 +384,35 @@
                 </div>
             </div>
         </section>
+        <section data-midnight="dark" class="dark-bg">
+            <div class="project-detail container padtop_20 padbot_90">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-5 offset-lg-1 align-self-center">
+                        <h3 class="text white-text no-gutter subtitle">My contribution</h3>
+                        <p class="white-text">
+                            I was lucky to work with someone as creative as Karen, when I arrived she had the whole
+                            concept layout, all I had to do was to come up with the aesthetics for the project, she
+                            really gave me creative freedom to create fun and colorful graphics for the project.
+                            To learn more about this amazing project visit WITOPS's website.
+                        </p>
+                        <a href="https://www.witops.org/jerk/" target="_self">
+                            <button class="site-btn  bottom_30" data-tilt>www.witops.org
+                                <i class="icon ion-md-arrow-down"></i>
+                            </button>
+                        </a>
+                    </div>
+                    <div class="image col-lg-5 align-self-center padtop_30">
+                        <img src="img/works/Jerk-project/Demeaner-R-5.png" alt="Demeaner" />
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- project-detail Two Columns | End -->
         <section class="white-bg">
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="Creating-Change.html">
+                <a class="next-link" href="Galaxy.html">
                     <div class="nav-title">Next Work</div>
-                    <div class="next-title">Creating-Change</div>
+                    <div class="next-title">Galaxy</div>
                 </a>
             </div>
         </section>
