--- a/jerk-project.html
+++ b/jerk-project.html
@@ -145,7 +145,7 @@
                             seeing her speak at an event hosted by the Financial Industry Regulatory Authority
                             &#40;FINRA.&#41;
                             Later that week I learned that her organization
-                            WITOPS was looking for volunteers so I signed up and I waslucky to ran into this amazing
+                            WITOPS was looking for volunteers so I signed up and I was lucky to ran into this amazing
                             project.
                         </p>
                     </div>
@@ -392,7 +392,7 @@
                         <p class="white-text">
                             I was lucky to work with someone as creative as Karen, when I arrived she had the whole
                             concept layout, all I had to do was to come up with the aesthetics for the project, she
-                            really gave me creative freedom to create fun and colorful graphics for the project.
+                            really gave me creative freedom to create fun and colorful graphics for it.
                             To learn more about this amazing project visit WITOPS's website.
                         </p>
                         <a href="https://www.witops.org/jerk/" target="_self">
