--- a/UI-UX-Illustrations.html
+++ b/UI-UX-Illustrations.html
@@ -205,9 +205,9 @@
         <!-- project-detail end -->
         <section>
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="Galaxy.html">
+                <a class="next-link" href="jerk-project.html">
                     <div class="nav-title">Next Work</div>
-                    <div class="next-title">Galaxy</div>
+                    <div class="next-title">The Jerk Project</div>
                 </a>
             </div>
         </section>
