--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -153,21 +153,23 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-8/PEOPLE-CC2015.jpg" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center pr-0 pl-0" src="img/works/work-8/PEOPLE-CC2015.jpg"
+        alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white" class="white-bg">
-      <img class="img-fluid padding_30" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
+      <img class="img-fluid padding_30 col align-self-center pr-0 pl-0" src="img/works/work-8/Pin-CC2015.jpg"
+        alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="dark">
-      <img class="img-fluid" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
@@ -197,7 +199,8 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white" class="white-bg">
-      <img class="img-fluid" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
+        alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
