--- a/USA-Today.html
+++ b/USA-Today.html
@@ -351,9 +351,12 @@
       </div>
     </section>
 
+    <!-- ====Full Screen IMG ===-->
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-1/Social-Video-Styleguide.png" alt="Social video styleguide" />
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-1/Social-Video-Styleguide.png"
+        alt="Social video styleguide">
     </div>
+    <!-- ====Full Screen IMG ===-->
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
