--- a/es-Creating-Change.html
+++ b/es-Creating-Change.html
@@ -160,13 +160,15 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="dark">
-      <img class="img-fluid" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
+
+
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white" class="white-bg top_30 bottom_30">
-      <img class="img-fluid align-content-center" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
         alt="Animacin del Logo del evento">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
@@ -176,7 +178,8 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-8/PEOPLE-CC2015.jpg" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/PEOPLE-CC2015.jpg"
+        alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
@@ -231,7 +234,8 @@
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="white" class="white-bg">
-      <img class="img-fluid" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/Pin-CC2015.jpg"
+        alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
