--- a/es-Storytelling-Bootcamp.html
+++ b/es-Storytelling-Bootcamp.html
@@ -158,13 +158,15 @@
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
-            <img class="img-fluid bottom_15" src="img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0"
+                src="img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
-            <img class="img-fluid" src="img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
+            <img class="img-fluid col align-self-center pr-0 pl-0"
+                src="img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -189,19 +191,22 @@
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15" src="img/works/work-4/one-page-Bio.jpg" alt="">
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="img/works/work-4/one-page-Bio.jpg"
+                alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15" src="img/works/work-4/one-page-Bio-2.jpg" alt="Letterhead">
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="img/works/work-4/one-page-Bio-2.jpg"
+                alt="Letterhead">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
-            <img class="img-fluid" src="img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
+            <img class="img-fluid col align-self-center pr-0 pl-0"
+                src="img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <!--Next-->
