--- a/es-USA-Today.html
+++ b/es-USA-Today.html
@@ -358,7 +358,8 @@
     </section>
 
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-1/Social-Video-Styleguide.png" alt="Social video styleguide" />
+      <img class="img-fluid col align-self-center p-0" src="img/works/work-1/Social-Video-Styleguide.png"
+        alt="Social video styleguide" />
     </div>
 
     <section class="white-bg">
