--- a/jerk-project.html
+++ b/jerk-project.html
@@ -188,7 +188,8 @@
         </section>
         <!-- ====Full Screen IMG ===-->
         <div data-midnight="dark" class="dark-bg">
-            <img class="img-fluid" src="img/works/Jerk-project/The-Solution-Hero-IMG.png" alt="The Solution">
+            <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/The-Solution-Hero-IMG.png"
+                alt="The Solution">
         </div>
         <!-- ====Full Screen IMG ===-->
         <section data-midnight="dark" class="jerk-project-bg-purple p-0">
@@ -207,7 +208,8 @@
             </div>
             <!-- ====Full Screen IMG ===-->
             <div data-midnight="dark" class="dark-bg">
-                <img class="img-fluid" src="img/works/Jerk-project/Bottom-curve-purple.png" alt="The Solution">
+                <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/Bottom-curve-purple.png"
+                    alt="The Solution">
             </div>
             <!-- ====Full Screen IMG ===-->
         </section>
@@ -230,7 +232,8 @@
         </section>
         <!-- ====Full Screen IMG ===-->
         <div data-midnight="dark" class="dark-bg">
-            <img class="img-fluid" src="img/works/Jerk-project/Top-curve-purple.png" alt="The Solution">
+            <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/Top-curve-purple.png"
+                alt="The Solution">
         </div>
         <!-- ====Full Screen IMG ===-->
 
@@ -307,8 +310,9 @@
             </div>
 
             <!-- ====Full Screen IMG ===-->
-            <div data-midnight="white" class="dark-bg">
-                <img class="img-fluid" src="img/works/Jerk-project/Bottom-curve-purple.png" alt="The Solution">
+            <div data-midnight="dark" class="dark-bg">
+                <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/Bottom-curve-purple.png"
+                    alt="The Solution">
             </div>
             <!-- ====Full Screen IMG ===-->
 
