Add link to spanish version and display: Block to full img-fluid images

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,20 +106,23 @@
       <div class="menu-container">
         <div class="menu-holder">
           <ul class="navmenu">
-            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
+            <li class="scroll">
               <a href="index.html#portfolio">Portfolio</a>
             </li>
-            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
+            <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
-            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
+            <li class="scroll">
               <a href="index.html#about">About</a>
             </li>
-            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
+            <li class="scroll">
               <a href="index.html#resume">Resume</a>
             </li>
-            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
+            <li class="scroll">
               <a href="index.html#contact">Contact Information</a>
+            </li>
+            <li class="scroll">
+              <a href="es.html">Website en Español</a>
             </li>
           </ul>
         </div>
