--- a/USA-Today.html
+++ b/USA-Today.html
@@ -83,7 +83,10 @@
               <a href="index.html#clients">Clients</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact</a>
+              <a href="index.html#contact">Contact Information</a>
+            </li>
+            <li class="scroll">
+              <a href="es.html">Website en Español</a>
             </li>
           </ul>
         </div>
