--- a/jerk-project.html
+++ b/jerk-project.html
@@ -86,7 +86,10 @@
                             <a href="index.html#clients">Clients</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#contact">Contact</a>
+                            <a href="index.html#contact">Contact Information</a>
+                        </li>
+                        <li class="scroll">
+                            <a href="es.html">Website en Español</a>
                         </li>
                     </ul>
                 </div>
@@ -188,8 +191,8 @@
         </section>
         <!-- ====Full Screen IMG ===-->
         <div data-midnight="dark" class="dark-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/The-Solution-Hero-IMG.png"
-                alt="The Solution">
+            <img class="d-block img-fluid col align-self-center p-0"
+                src="img/works/Jerk-project/The-Solution-Hero-IMG.png" alt="The Solution">
         </div>
         <!-- ====Full Screen IMG ===-->
         <section data-midnight="dark" class="jerk-project-bg-purple p-0">
@@ -208,8 +211,8 @@
             </div>
             <!-- ====Full Screen IMG ===-->
             <div data-midnight="dark" class="dark-bg">
-                <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/Bottom-curve-purple.png"
-                    alt="The Solution">
+                <img class="d-block img-fluid col align-self-center p-0"
+                    src="img/works/Jerk-project/Bottom-curve-purple.png" alt="The Solution">
             </div>
             <!-- ====Full Screen IMG ===-->
         </section>
@@ -232,7 +235,7 @@
         </section>
         <!-- ====Full Screen IMG ===-->
         <div data-midnight="dark" class="dark-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/Top-curve-purple.png"
+            <img class="d-block img-fluid col align-self-center p-0" src="img/works/Jerk-project/Top-curve-purple.png"
                 alt="The Solution">
         </div>
         <!-- ====Full Screen IMG ===-->
@@ -311,8 +314,8 @@
 
             <!-- ====Full Screen IMG ===-->
             <div data-midnight="dark" class="dark-bg">
-                <img class="img-fluid col align-self-center p-0" src="img/works/Jerk-project/Bottom-curve-purple.png"
-                    alt="The Solution">
+                <img class="d-block img-fluid col align-self-center p-0"
+                    src="img/works/Jerk-project/Bottom-curve-purple.png" alt="The Solution">
             </div>
             <!-- ====Full Screen IMG ===-->
 
