--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -87,6 +87,9 @@
             <li class="scroll">
               <a href="index.html#contact">Contact Information</a>
             </li>
+            <li class="scroll">
+              <a href="es.html">Website en Español</a>
+            </li>
           </ul>
         </div>
       </div>
