--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -109,6 +109,9 @@
             <li class="scroll">
               <a href="index.html#contact">Contact Information</a>
             </li>
+            <li class="scroll">
+              <a href="es.html">Website en Español</a>
+            </li>
           </ul>
         </div>
       </div>
