--- a/es-Biodiversity-Festival.html
+++ b/es-Biodiversity-Festival.html
@@ -88,6 +88,9 @@
             <li class="scroll">
               <a href="#contact">Contacto</a>
             </li>
+            <li class="scroll">
+              <a href="index.html">Website in English</a>
+            </li>
           </ul>
         </div>
       </div>
