--- a/Galaxy.html
+++ b/Galaxy.html
@@ -613,7 +613,7 @@
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
