Image with full with
issue resolved

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -180,13 +180,13 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/dark-theme.png" alt="">
+        <div data-midnight="dark">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/dark-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/white-theme.png" alt="">
+        <div data-midnight="white">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/white-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container white-bg">
@@ -197,8 +197,8 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/top-cruve.png" alt="">
+        <div data-midnight="white" class="white-bg">
+            <img class="img-fluid col align-self-center p-0" src=" img/works/toucan/top-cruve.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
@@ -217,8 +217,8 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
+        <div data-midnight="white" class="white-bg">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container project-detail white-bg padtop_90 pb-3">
@@ -263,8 +263,8 @@
         </section>
 
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid white-bg">
-            <img class="img-fluid" src="img/works/toucan/bootstrap-wave-0_07.png" alt="">
+        <div data-midnight="white" class="white-bg">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/bootstrap-wave-0_07.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -309,8 +309,8 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/bootstrap-wave-0_09.png" alt="">
+        <div data-midnight="white" class="white-bg">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/bootstrap-wave-0_09.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -333,8 +333,8 @@
         <!-- ======= 2 Images  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/top-cruve.png" alt="">
+        <div data-midnight="white" class="white-bg">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/top-cruve.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
@@ -361,8 +361,8 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
-            <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
+        <div data-midnight="white" class="white-bg">
+            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
