New Email and resumes

--- a/Library-of-Congress.html
+++ b/Library-of-Congress.html
@@ -250,7 +250,7 @@
             <h2 class="white-text subtitle bottom_30">Contact Information</h2>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
