--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/Resume_Peter_Verastegui_September_(2020).pdf" target="_blank" download>
+          <a href="/cv/Resume_Peter Verastegui_July_(2021).pdf" target="_blank" download>
             <button class="site-btn" data-tilt> DOWNLOAD RESUME
               <i class="icon ion-md-arrow-down"></i>
             </button>
@@ -404,7 +404,7 @@
             <h2 class="white-text subtitle bottom_30">Contact Information</h2>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
