Sr. Designer now

--- a/es.html
+++ b/es.html
@@ -302,7 +302,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30 grey-text">Diseñador UX,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador UX Senior,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -400,7 +400,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/CV_Peter Verastegui_July_(2021).pdf" target="popup" download>
+          <a href="/cv/CV_Peter Verastegui_Julio_(2021).pdf" target="popup" download>
             <button class="site-btn" data-tilt> DESCARGAR CV
               <i class="icon ion-md-arrow-down"></i>
             </button>
