allignement of footer

--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -278,7 +278,7 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
