--- a/es.html
+++ b/es.html
@@ -423,8 +423,8 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center"">
+            <a href=" tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
