--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Galaxy.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/1600x883-Galaxy-Thumbnail.png"
-                alt="">
+              <img class="round-corners bottom_60 plus-cursor"
+                src="img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
             </a>
           </div>
 
