--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -350,13 +350,15 @@
               data-items-tablet-small="1">
 
               <div class="item">
-                <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Light-Theme.svg"
-                  alt="Light Theme" />
-              </div>
-              <div class="item">
                 <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Facility-Profile.svg"
                   alt="Dark Theme" />
               </div>
+
+              <div class="item">
+                <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Light-Theme.svg"
+                  alt="Light Theme" />
+              </div>
+
 
             </div>
             <!-- testimonials end -->
@@ -512,7 +514,7 @@
           <!-- Images -->
           <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12">
             <div class="project-detail text-center">
-              <h2 class="white-text text-center title bottom_30">Es una broma, aqui les dejo un relago
+              <h2 class="white-text text-center title bottom_30">😆 Aqui les dejo un regalo
               </h2>
               <a href="https://www.figma.com/file/aTIhAVP6hrjXKl14rSFVfq/Galaxy-Free-for-the-people" target="_blank">
                 <button class="site-btn  text-center  bottom_30" data-tilt>ARCHIVO DE FIGMA
