--- a/es.html
+++ b/es.html
@@ -116,9 +116,9 @@
         <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Gallo-Guapo.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
-                alt="">
+            <a href="jerk-project.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/Jerk-project/jerk-project-Thumbnail.png"
+                alt="Jerk Project">
             </a>
           </div>
 
@@ -177,8 +177,8 @@
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="es-Galaxy.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/1600x883-Galaxy-Thumbnail.png"
-                alt="">
+              <img class="round-corners bottom_60 plus-cursor"
+                src="img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
             </a>
           </div>
 
@@ -188,17 +188,17 @@
                 alt="Library of Congress">
             </a>
           </div>
+
+
           <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <!-- Reel * Start -->
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
-                src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+                src="https://player.vimeo.com/video/596307920?h=96126059f9&title=0&byline=0&portrait=0"
                 style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-                allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
             <script src="https://player.vimeo.com/api/player.js"></script>
+            <!-- Reel * End -->
           </div>
-
-
-
-
         </div>
 
 
