--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="jerk-project.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/Jerk-project/jerk-project-Thumbnail.png"
-                alt="">
+                alt="Jerk Project">
             </a>
           </div>
 
@@ -189,12 +189,15 @@
                 alt="Library of Congress">
             </a>
           </div>
+
           <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <!-- Reel * Start -->
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
-                src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+                src="https://player.vimeo.com/video/596307920?h=96126059f9&title=0&byline=0&portrait=0"
                 style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-                allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
             <script src="https://player.vimeo.com/api/player.js"></script>
+            <!-- Reel * End -->
           </div>
 
 
@@ -208,20 +211,12 @@
       <div class="row lightbox-gallery">
 
 
-
-
         <div class="col-lg-4">
-
-
-
 
 
         </div>
 
         <div class="col-lg-4">
-
-
-
 
 
 
