--- a/es.html
+++ b/es.html
@@ -183,7 +183,7 @@
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="toucan-template.html">
+            <a href="es-toucan-template.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/toucan/Toucan-thumbnail.png"
                 alt="Library of Congress">
             </a>
@@ -385,8 +385,7 @@
 
           <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
           <p class="grey-text">Bachiller de Bellas Artes, licenciatura en diseño gráfico, <br> Washington, D. C., EE.
-            UU.<br> Clase
-            del 2014</p>
+            UU.<br> 2010 - 2014</p>
 
 
         </div>
